<resources>
    <string name="app_name">CyPOS Dashboard</string>
    <string name="logo">logo</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="textviewplaceholder">TextView</string>
    <string name="image_view_place_holder">Image View</string>
    <string name="dev">All rights reserved Powered by Cybene Technologies</string>
    <string name="user_name">Email/User Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_info">Do not have an account? Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered_sign_in">Already Registered? Sign In</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="cybene_technologies_ltd">Cybene Technologies Ltd</string>
    <string name="old_pass">Old password</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="activation_key">Activation Key</string>
    <string name="company_name">Company Name</string>
    <string name="supplier_dashboard">Supplier Dashboard</string>
    <string name="customer_dashboard">Customer Dashboard</string>
    <string name="branches">Branches</string>
    <string name="accounts">Accounts</string>
    <string name="inventory">Inventory</string>
    <string name="purchase">Purchase</string>
    <string name="monthlySales">Sales</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="dash">-</string>
    <string name="monthly_sales">Monthly Sales</string>
    <string name="daily_sales">Daily Sales</string>
    <string name="monthly_sales_data_grid">Monthly Sales Data Grid</string>
    <string name="month">Month</string>
    <string name="sales">Sales</string>
    <string name="sales_man">Sales Man</string>
    <string name="sales_order">Sales Order</string>
    <string name="harsh">#</string>
    <string name="date">Date</string>
    <string name="invoice_number">Invoice No</string>
    <string name="customer_name">Customer Name</string>
    <string name="amount">Amount</string>
    <string name="computer">Computer</string>
    <string name="total">Total</string>
    <string name="computer_name">Computer Name</string>
    <string name="code">Code</string>
    <string name="cr_no">Cr No</string>
    <string name="transaction">Transaction</string>
    <string name="customer">Customer</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="show">Show</string>
    <string name="supplier_invoice_no">Supplier Invoice No</string>
    <string name="grn_no">GRN No</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="grt_no">GRT No</string>
    <string name="total_purchase">Total Purchase</string>
    <string name="dnote_no">Dnote No</string>
    <string name="department_name">Department Name</string>
    <string name="valuecp">ValueCP</string>
    <string name="valuesp">ValueSP</string>
    <string name="balance">Balance</string>
    <string name="receipt_no">Receipt No</string>
    <string name="payment_no">Payment No</string>
    <string name="configure">Configure</string>
    <string name="link_to_backend_scripts">Link to backend scripts</string>
    <string name="location_name">Location Name</string>
    <string name="gin_no">GIN NO</string>
    <string name="total_amount">Total Amount</string>
    <string name="my_profile">My Profile</string>
    <string name="default_value">0</string>
    <string name="monthly_purchase_chart">Monthly Purchase Chart</string>
    <string name="cash_sale_payment_mode">Cash Sale Payment Mode</string>
    <string name="computer_wise_sales">Computer Wise Sales</string>
    <string name="credit_note_list">Credit Note List</string>
    <string name="customer_outstanding_list">Customer Outstanding List</string>
    <string name="customer_wise_sales_list">Customer wise sales list</string>
    <string name="daily_purchase_chart">Daily Purchase Chart</string>
    <string name="daily_purchase_grid_list">Daily Purchase Grid List</string>
    <string name="daily_sales_chart">Daily Sales Chart</string>
    <string name="daily_sales_grid_view">Daily Sales Grid View</string>
    <string name="delivery_note_list">Delivery Note List</string>
    <string name="monthly_purchase_grid_view">Monthly Purchase Grid View</string>
    <string name="monthly_sales_chart">Monthly Sales Chart</string>
    <string name="department_wise_purchase_list">Department Wise Purchase List</string>
    <string name="department_wise_stock_valuation">Department Wise Stock Valuation</string>
    <string name="grn_list">GRN List</string>
    <string name="invoice_list">Invoice List</string>
    <string name="lpo_list">LPO List</string>
    <string name="monthly_purchase">Monthly Purchase</string>
    <string name="payment_list">Payment List</string>
    <string name="payment_reversal_list">Payment Reversal List</string>
    <string name="post_credit_note_purchase_list">Post Credit Note Purchase List</string>
    <string name="post_credit_note_sales">Post Credit Note Sales</string>
    <string name="post_dated_cheque">Post Dated Cheque</string>
    <string name="post_dated_cheque_customer_list">Post Dated Cheque Customer List</string>
    <string name="post_dated_cheque_supplier">Post Dated Cheque Supplier</string>
    <string name="receipt_list">Receipt List</string>
    <string name="receipt_reversal_list">Receipt Reversal List</string>
    <string name="received_list">Received List</string>
    <string name="returned_goods_list">Returned Goods List</string>
    <string name="sales_man_wise_data_grid">Sales Man Wise Data Grid</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_outstanding">Supplier Outstanding</string>
    <string name="supplier_wise_purchase_list">Supplier Wise Purchase List</string>
    <string name="till_cash_pickup">Till Cash Pickup</string>
    <string name="total_stock_valuation">Total Stock Valuation</string>
    <string name="transaction_wise_sales_data">Transaction Wise Sales Data</string>
    <string name="transfer_list">Transfer List</string>
    <string name="vat_code_wise_sales_data_grid">VAT Code Wise Sales Data Grid</string>
    <string name="client">Client</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="credit_note_no">Credit Note No</string>
    <string name="credit_note_date">Credit Note Date</string>
    <string name="cheque_no">Cheque No</string>
    <string name="monthly_customer_sales">Monthly Customer Sales</string>
    <string name="daily_customer_sales">Daily Customer Sales</string>
    <string name="last_invoice_details">Last Invoice Details</string>
    <string name="total_invoice_per_month">Total Invoice per Month</string>
    <string name="total_sales_customer_wise">Total Sales Customer Wise</string>
    <string name="invoice">Invoice</string>
    <string name="zero">0</string>
    <string name="receipt_date">Receipt Date</string>
    <string name="customer_code">Customer Code</string>
    <string name="acc_code">Acc Code</string>
    <string name="amount_type">Amount Type</string>
    <string name="remaining_amount">Remaining Amount</string>
    <string name="chq_date">Chq Date</string>
    <string name="bank_name">Bank Name</string>
    <string name="is_recrev">Is RecRev</string>
    <string name="is_assign">Is Assign</string>
    <string name="created">Created</string>
    <string name="created_by">Created By</string>
    <string name="modified">Modified</string>
    <string name="modified_by">Modified By</string>
    <string name="sr_no">Sr No</string>
    <string name="last_receipt_details">Last Receipt Details</string>
    <string name="remark">Remark</string>
    <string name="address1">Address</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="pin_no">PIN No</string>
    <string name="vat_no">VAT No</string>
    <string name="credit_days">Credit Days</string>
    <string name="credit_amount">Credit Amount</string>
    <string name="opening_balance">Opening Balance</string>
    <string name="subroute_code">SubRoute Code</string>
    <string name="closing_balance">Closing Balance</string>
    <string name="city">City</string>
    <string name="grn_date">GRN Date</string>
    <string name="supinvno">SupInvNo</string>
    <string name="gr_no">GR No</string>
    <string name="gr_date">GR Date</string>
    <string name="monthly_supplier_purchase">Monthly Supplier Purchase</string>
    <string name="daily_supplier_purchase">Daily Supplier Purchase</string>
    <string name="total_monthly_grn">Total Monthly GRN</string>
    <string name="total_purchase_supplier_wise">Total Purchase Supplier Wise</string>
    <string name="last_grn_details">Last GRN Details</string>
    <string name="monthly_purchase_supplier_wise">Monthly Purchase Supplier Wise</string>
    <string name="last_payment_details">Last Payment Details</string>
    <string name="payment_date">Payment Date</string>
    <string name="supplier_code">Supplier Code</string>
    <string name="is_pay_rev">Is Pay Rev</string>
    <string name="supplier_credit_details">Supplier Credit Details</string>
    <string name="back">Back</string>
    <string name="monthly_sales_customer_wise">Monthly Sales Customer Wise</string>
    <string name="customer_credit_details">Customer Credit Details</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="today_s_sales">Today\'s Sales</string>
    <string name="kes_245_800">KES 0.00</string>
    <string name="_12_from_yesterday">▲0% from yesterday</string>
    <string name="test_store_branch_3">Test Store - Branch 3</string>
    <string name="total_refund_from_tills">Total Refunds From Tills</string>
    <string name="total_invoice">Total Invoice</string>
    <string name="goods_issued_to_branch">Goods Issued to Branch</string>
    <string name="goods_received_from_branch">Goods Received From Branch</string>
    <string name="from_date">From Date</string>
    <string name="main">Main</string>
    <string name="session">Session</string>
    <string name="account">My Account</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="change_pin">Change PIN</string>
    <string name="name">Name</string>
    <string name="no_logs_available">No logs available.</string>
    <string name="export_to_text_file">Export to Text File</string>
    <string name="close">Close</string>
    <string name="system_logs">System Logs</string>
</resources>