<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cybene.cyposdashboard.ui.dashboard.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sales"
        android:name="com.cybene.cyposdashboard.ui.sales.SalesFragment"
        android:label="@string/sales"
        tools:layout="@layout/fragment_sales" />

    <fragment
        android:id="@+id/nav_sales_man"
        android:name="com.cybene.cyposdashboard.ui.sales.SalesMan"
        android:label="@string/sales_man"
        tools:layout="@layout/fragment_sales_man" />

    <fragment
        android:id="@+id/nav_sales_order"
        android:name="com.cybene.cyposdashboard.ui.sales.SalesOrder"
        android:label="@string/sales_order"
        tools:layout="@layout/fragment_sales_order" />

    <fragment
        android:id="@+id/nav_purchase"
        android:name="com.cybene.cyposdashboard.ui.purchase.PurchaseFragment"
        android:label="@string/purchase"
        tools:layout="@layout/fragment_purchase" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.cybene.cyposdashboard.ui.inventory.InventoryFragment"
        android:label="@string/inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/nav_accounts"
        android:name="com.cybene.cyposdashboard.ui.accounts.AccountsFragment"
        android:label="@string/accounts"
        tools:layout="@layout/fragment_accounts" />

    <fragment
        android:id="@+id/nav_branch"
        android:name="com.cybene.cyposdashboard.ui.branch.BranchFragment"
        android:label="@string/branches"
        tools:layout="@layout/fragment_branch" />

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.cybene.cyposdashboard.ui.customer.CustomerFragment"
        android:label="@string/customer_dashboard"
        tools:layout="@layout/fragment_customer" />

    <fragment
        android:id="@+id/nav_supplier"
        android:name="com.cybene.cyposdashboard.ui.supplier.SupplierFragment"
        android:label="@string/supplier_dashboard"
        tools:layout="@layout/fragment_supplier" />
</navigation>