<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_sale"
            android:title="@string/monthlySales" />
        <item
            android:id="@+id/nav_purchase"
            android:icon="@drawable/ic_buy"
            android:title="@string/purchase" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/inventory" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_accounting"
            android:title="@string/accounts" />
</menu>