<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="100"
        android:title="@string/notifications"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_notifications"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_settings"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_baseline_co_present_24"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_logout_24"/>
</menu>