<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:title="@string/main"
        android:enabled="false" />
    <group android:checkableBehavior="single"
        android:id="@+id/main_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <!--item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_sale"
            android:title="@string/monthlySales" />
        <item
            android:id="@+id/nav_sales_man"
            android:icon="@drawable/ic_sale"
            android:title="@string/sales_man" />
        <item
            android:id="@+id/nav_sales_order"
            android:icon="@drawable/ic_sale"
            android:title="@string/sales_order" />
        <item
            android:id="@+id/nav_purchase"
            android:icon="@drawable/ic_buy"
            android:title="@string/purchase" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/inventory" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_accounting"
            android:title="@string/accounts" />
        <item
            android:id="@+id/nav_branch"
            android:icon="@drawable/ic_franchise"
            android:title="@string/branches" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/customer_dashboard" />
        <item
            android:id="@+id/nav_supplier"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/supplier_dashboard" /-->
    </group>
    <!-- ===== ACCOUNT ===== -->
    <item
        android:title="@string/account"
        android:enabled="false" />

    <group android:checkableBehavior="single"
        android:id="@+id/account_group">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_baseline_co_present_24" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24" />
    </group>

    <!-- ===== SESSION ===== -->
    <item
        android:title="@string/session"
        android:enabled="false" />

    <group android:checkableBehavior="single"
        android:id="@+id/session_group">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_baseline_logout_24" />
    </group>
</menu>